@@ -2,7 +2,7 @@
  OpenSSL CHANGES
  _______________
 
- Changes between 0.9.8 and 0.9.9  [xx XXX xxxx]
+ Changes between 0.9.8a and 0.9.9  [xx XXX xxxx]
 
   *) Support for PKCS#1 RSAPublicKey format on rsa utility command line.
      [Steve Henson]
@@ -26,6 +26,12 @@
      [Steve Henson]
 
  Changes between 0.9.8 and 0.9.8a  [XX xxx XXXX]
+
+  *) Avoid small subgroup attacks in Diffie-Hellman.
+     [Nick Mathewson and Ben Laurie]
+
+  *) Add functions for well-known primes.
+     [Nick Mathewson]
 
   *) Extended Windows CE support.
      [Satoshi Nakamura and Andy Polyakov]
